--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,10 @@
-</main>
+</div>
+
 <footer>
-  <p>&copy; <%= new Date().getFullYear() %> Numele Tău. Toate drepturile rezervate.</p>
+  <p>&copy; <%= new Date().getFullYear() %> [Your Name]. All rights reserved. <%# Add design credit if desired %>
+  </p>
 </footer>
+
 </body>
+
 </html>
