final before deployment

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,12 @@
 </div>
 
 <footer>
-  <p>&copy; <%= new Date().getFullYear() %> [Your Name]. All rights reserved. <%# Add design credit if desired %>
+  <p>&copy; <%= new Date().getFullYear() %> [Alexandru Stoica]. All rights reserved. <%# Add design credit if desired %>
   </p>
 </footer>
+
+<script src="/js/theme.js"></script>
+<script src="/js/nav.js"></script> 
 
 </body>
 
